--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+--extra-index-url https://download.pytorch.org/whl/cu124
+
 numpy>=2.1.3
 matplotlib>=3.9.2
 scikit-learn>=1.5.2
-torchvision>=0.20.1
+torchvision==0.20.1+cu124
 pyyaml>=6.0.2
 alphashape>=1.3.1
 scipy>=1.14.1
