--- a/environment.yaml
+++ b/environment.yaml
@@ -171,6 +171,7 @@ dependencies:
   - zstandard=0.23.0=py312h7606c53_1
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
+      - --extra-index-url https://download.pytorch.org/whl/cu124
       - filelock==3.13.1
       - fsspec==2024.2.0
       - mpmath==1.3.0
@@ -179,4 +180,3 @@ dependencies:
       - torchaudio==2.5.1+cu124
       - torchvision==0.20.1+cu124
       - typing-extensions==4.9.0
-prefix: C:\Users\User\anaconda3\envs\NeuberNet
